--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Anfa' Collection is coming soon!
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <style>
+    .center {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      /* bring your own prefixes */
+      transform: translate(-50%, -50%);
+      width: 50%;
+    }
+
+    h1 {
+      font-size: 250%;
+      text-align:center;
+      position: fixed;
+      top: 85%;
+      left: 50%;
+      /* bring your own prefixes */
+      transform: translate(-50%, -50%);
+      width: 50%;
+    }
+  </style>
+  <title>Anfa' Collection</title>
+</head>
+<body>
+  <img src="logo.jpg" alt="logo" class="center">
+  <h1>Coming Soon!</h1>
+</body>
+</html>
